[gd_scene load_steps=5 format=3 uid="uid://cixl7aj4v60iv"]

[ext_resource type="Script" path="res://Settings/settings.gd" id="1_xh23f"]
[ext_resource type="PackedScene" uid="uid://10lld2f4r3aw" path="res://Settings/settings_category.tscn" id="2_3172w"]
[ext_resource type="Script" path="res://Settings/ConfigSettings.gd" id="3_05v2j"]
[ext_resource type="Script" path="res://Settings/AnimationsData.gd" id="4_c6eaj"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xh23f")
settings_category = ExtResource("2_3172w")

[node name="TabsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 48.0
offset_bottom = 79.0
grow_horizontal = 2

[node name="TabBar" type="TabBar" parent="TabsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="LineEdit" parent="TabsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.14
text = "New Animation"

[node name="Button" type="Button" parent="TabsContainer"]
layout_mode = 2
text = "+"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 88.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 39.0
grow_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 26
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
text = "Save"

[node name="SettingsData" type="Node" parent="."]
script = ExtResource("3_05v2j")

[node name="AnimationsData" type="Node" parent="."]
script = ExtResource("4_c6eaj")

[connection signal="tab_changed" from="TabsContainer/TabBar" to="." method="_on_tab_bar_tab_changed"]
[connection signal="pressed" from="TabsContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
